Update Paragraph structure

--- a/src/content/technotes/TN0041-organisational-structure.mdx
+++ b/src/content/technotes/TN0041-organisational-structure.mdx
@@ -9,15 +9,19 @@ When setting out to deliver a federated Supergraph at scale, one of the biggest 
 
 **Benefits of Federation over Microservices**
 
-Historically, a lot of us have made the transition from monolith to microservices to enable our teams to move quicker, have more autonomy and to remove the huge deployment overheads when deploying updates to a given area of an application. Microservices did provide a method for deploying independently from other teams, from not having to have such "big-bang" deployments for each update - however, microservices also led to increased silos between teams, divergence of standards, occasionally the duplication of functionality and often the need for BFFs. The beauty and power of a federated graph is that it provides an abstraction layer between backend microservices and the needs and implementation of the client. **An abstraction layer that is generated and composed via automation from individual contributions to Subgraphs that is able to ensure it isn't breaking standards, existing frontend journeys or other pre-existing entities across the Supergraph**. It also enables the Schema to expose exactly the data in the format required by the client, allowing lightweight and ultimately more performant frontend applications irrespective of the backend implementation. So with this in mind, how do we best set-up our teams to maintain this autonomy and ownership over different domains whilst also ensuring best practices, consistency, governance, quality, and reuse? Or in other words; decouple teams whilst avoiding being siloed?
+Many companies have made the transition from monolith to microservices to enable teams to move quicker, have more autonomy and to remove the huge deployment overheads when deploying updates to a given area of an application. Microservices do provide a method for deploying independently from other teams - however, microservices also led to increased silos between teams, divergence of standards, occasionally the duplication of functionality and often the need for BFFs.
+
+The beauty and power of a federated graph is that it provides an abstraction layer between backend microservices and the needs and implementation of the client. **An abstraction layer that is generated and composed via automation from individual contributions to Subgraphs that is able to ensure it isn't breaking standards, existing frontend journeys or other pre-existing entities across the Supergraph**. It also enables the Schema to expose exactly the data in the format required by the client, allowing lightweight and ultimately more performant frontend applications irrespective of the backend implementation. So with this in mind, how do you best set-up our teams to maintain this autonomy and ownership over different domains whilst also ensuring best practices, consistency, governance, quality, and reuse? Or in other words; how do you decouple teams whilst avoiding being siloed?
 
 **Schema design and Development**
 
-The first step in the implementation of a Supergraph is well considered Schema design and Subgraph development. In this phase the primary concern when building out a Schema is the needs and requirements of the client. This requires the engineers responsible for their contributions to the Schema to truly understand the client requirements and be able to provide an efficient implementation for retrieving and providing the given data. Often this can lend itself to **teams that work vertically within given domains/features to allow collaboration** between FE Engineers, User Researchers, Designers as well as autonomy and ownership of their Subgraph that supports the given domain. It’s worth noting that there are of course situations where a GraphQL endpoint is being developed prior to clients needing to consume it, however in these situations (i.e. public facing GraphQL endpoints for future public consumption) the way in which data is likely to be consumed can still be considered. For instance, it is important that Schemas are human readable to allow clients to understand the data available, as well as making sure Queries and Mutations are specific and that fields are clear and well documented to ensure that clients are able to get maximum value from the graph. Ultimately, when organising engineering teams to build out and implement each of the Subgraphs that make up the overall Supergraph, the goal is well governed autonomous teams.
+One of the most crucial aspects of implementating a Supergraph is well considered Schema design and Subgraph development. In this phase the primary concern when building out a Schema is the needs and requirements of the client. This requires the engineers responsible for their contributions to the Schema to truly understand the client requirements and be able to provide an efficient implementation for retrieving and providing the given data.
+
+Often this can lend itself to **teams that work vertically within given domains/features to allow collaboration** between FE Engineers, User Researchers, Designers as well as autonomy and ownership of their Subgraph that supports the given domain. It’s worth noting that there are of course situations where a GraphQL endpoint is being developed prior to clients needing to consume it, however in these situations (i.e. public facing GraphQL endpoints for future public consumption) the way in which data is likely to be consumed can still be considered. For instance, it is important that Schemas are human readable to allow clients to understand the data available, as well as making sure Queries and Mutations are specific and that fields are clear and well documented to ensure that clients are able to get maximum value from the graph. Ultimately, when organising engineering teams to build out and implement each of the Subgraphs that make up the overall Supergraph, the goal is well governed autonomous teams.
 
 However, this is not to say that other engineers cannot contribute to other Subgraphs. The power of a federated graph is enabling autonomy for development of Subgraphs, but also consistency across the Supergraph as a whole, which can be achieved through a number of different organisational structures including a **GraphQL guild** across teams, **embedded GraphQL experts** within engineering teams as well as identifying and empowering a **Supergraph product owner**.
 
-**Deployment/CICD**
+**Deployment with CICD**
 
 The second critical element of delivering a Supergraph at scale is comprehensive and efficient CICD. In order to ensure consistency across teams, it is important that there are adequate safeguards in place that will prevent conflicting or breaking changes being pushed through to the Supergraph. This can be achieved in a number of different ways, one of the most effective ways is adopting a central registry that can provide a central source of truth and the ability to run checks such as Composition Checks and Schema Checks that give immediate feedback regarding how the updated elements of the graph are actively being used in production. A central registry can also provide the ability for all teams to view the wider supergraph, manage access, view usage, create different variations of the Supergraph (i.e. Variants or Contracts) as well as test new queries or mutations against each of the versions of the graph. This level of maturity between engineering teams empowers engineers to make contributions to the graph in the knowledge that they are not making breaking changes, have full view of current usage, align to best practice and avoid duplication of functionality and code across the graph.
 
@@ -35,8 +39,8 @@ However, in addition to promoting GraphQL and federation within engineering team
 
 Ultimately organisational structure is critical to the success of the graph within an enterprise. Below are some of the key takeaways for setting up your teams for success:
 
-- Important that teams are setup to allow autonomy over updates to their Subgraph(s).
-- CICD should be setup to ensure comprehensive checks and quick feedback to engineers on changes they are trying to push through to Supergraph.
+- It is important that teams are setup to allow autonomy over updates to their subgraph(s).
+- CI/CD should be setup to ensure comprehensive checks and quick feedback to engineers on changes they are trying to push through to the supergraph.
 - Teams should have the adequate knowledge and understanding of best practices and internal standards when contributing to the graph, possibly via embedded GraphQL SMEs, links to a cross-team GraphQL guild and/or well managed peer reviews etc.
 - There is a central "team" or collective who are responsible for understanding the versions of tools, Router/Gateway, Subgraphs, infrastructure, deployment processes as well as configuration and sets the graph up securely and appropriately for scale.
 - There is time and focus put into ensuring that knowledge is shared amongst engineers via numerous approaches such as pair programming, mobbing, playbacks, peer reviews, documentation etc.
