Remove additional wording

--- a/src/content/technotes/TN0041-organisational-structure.mdx
+++ b/src/content/technotes/TN0041-organisational-structure.mdx
@@ -11,7 +11,7 @@ When setting out to deliver a federated Supergraph at scale, one of the biggest 
 
 Many companies have made the transition from monolith to microservices to enable teams to move quicker, have more autonomy and to remove the huge deployment overheads when deploying updates to a given area of an application. Microservices do provide a method for deploying independently from other teams - however, microservices also led to increased silos between teams, divergence of standards, occasionally the duplication of functionality and often the need for BFFs.
 
-The beauty and power of a federated graph is that it provides an abstraction layer between backend microservices and the needs and implementation of the client. **An abstraction layer that is generated and composed via automation from individual contributions to Subgraphs that is able to ensure it isn't breaking standards, existing frontend journeys or other pre-existing entities across the Supergraph**. It also enables the Schema to expose exactly the data in the format required by the client, allowing lightweight and ultimately more performant frontend applications irrespective of the backend implementation. So with this in mind, how do you best set-up our teams to maintain this autonomy and ownership over different domains whilst also ensuring best practices, consistency, governance, quality, and reuse? Or in other words; how do you decouple teams whilst avoiding being siloed?
+The beauty and power of a federated graph is that it provides an abstraction layer between backend microservices and the needs and implementation of the client. It is generated and composed via automation from individual contributions to Subgraphs that is able to ensure it isn't breaking standards, existing frontend journeys or other pre-existing entities across the Supergraph. It also enables the Schema to expose exactly the data in the format required by the client, allowing lightweight and ultimately more performant frontend applications irrespective of the backend implementation. So with this in mind, how do you best set-up our teams to maintain this autonomy and ownership over different domains whilst also ensuring best practices, consistency, governance, quality, and reuse? Or in other words; how do you decouple teams whilst avoiding being siloed?
 
 **Schema design and Development**
 
