--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -31,7 +31,7 @@ _Some_ legacy organizations can upgrade to a current plan. [See details.](../org
 
 **Apollo Studio** is the primary web interface for interacting with the GraphOS platform. We'll use Studio in every step of this tutorial, starting with creating an account.
 
-1. Go to [studio.apollographql.com](https://studio.apollographql.com/) and click **Let's get started**.
+1. Go to [studio.apollographql.com](https://studio.apollographql.com/?referrer=docs-content) and click **Let's get started**.
 
 2. Choose a signup method (GitHub or username/password).
 
@@ -83,7 +83,7 @@ flowchart LR;
 
 </blockquote>
 
-1. From your new organization in [Apollo Studio](https://studio.apollographql.com/), navigate to the **Graphs** tab if it isn't already open.
+1. From your new organization in [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content), navigate to the **Graphs** tab if it isn't already open.
 
    Because you haven't created any graphs yet, Studio shows the following:
 
