--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -63,7 +63,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
 
 <ExpansionPanel title="Serverless plans">
 
-1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
+1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content).
 
     - **If you see this dialog...**
 
@@ -117,7 +117,7 @@ Your graph has been created, and it appears in the **Classic Graphs** section of
 
 <ExpansionPanel title="Enterprise and legacy plans">
 
-1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
+1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content).
 
 2. Click **New Graph** in the top right. Studio displays the following dialog:
 
@@ -444,7 +444,7 @@ Do the following in your router project's root directory:
 
 With our subgraph schemas ready, we now can use the Rover CLI's `subgraph publish` command to publish those schemas to GraphOS.
 
-In [Apollo Studio](https://studio.apollographql.com/), click the graph you created back in the first step. Because we haven't published a schema to it yet, the following dialog appears:
+In [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content), click the graph you created back in the first step. Because we haven't published a schema to it yet, the following dialog appears:
 
 <img
   src="../../img/register-schema-dialog.jpg"
@@ -591,7 +591,7 @@ While we're here, execute some test queries against the supergraph! We'll look a
 
 Because our router is connected to GraphOS, it automatically collects and reports metrics on incoming operations. You can then visualize those metrics in Studio.
 
-Return to [Apollo Studio](https://studio.apollographql.com) and go to your supergraph variant's Operations page, which looks like this:
+Return to [Apollo Studio](https://studio.apollographql.com?referrer=docs-content) and go to your supergraph variant's Operations page, which looks like this:
 
 <img
   src="../../img/operations-quickstart.jpg"
