--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -87,7 +87,7 @@ The GraphOS platform provides an ever-growing collection of tools and services t
   - Whenever you update a subgraph schema, GraphOS composes a new _supergraph_ schema for your router. If composition succeeds, your router automatically begins using its new schema.
   - You can view the results of each [launch](/graphos/delivery/launches/) that takes place whenever you update a subgraph schema, helping you resolve any issues that might occur.
 - **An interface for every use case.**
-  - [Apollo Studio](https://studio.apollographql.com) is the primary web interface for GraphOS. Among other capabilities, you use Studio to create your organization and its supergraphs, view [schemas](/graphos/graphs/studio-features/#the-schema-page) and [metrics](/graphos/metrics/), and test out operations in [the Explorer](/graphos/explorer/).
+  - [Apollo Studio](https://studio.apollographql.com?referrer=docs-content) is the primary web interface for GraphOS. Among other capabilities, you use Studio to create your organization and its supergraphs, view [schemas](/graphos/graphs/studio-features/#the-schema-page) and [metrics](/graphos/metrics/), and test out operations in [the Explorer](/graphos/explorer/).
   - [The Rover CLI](/rover/getting-started/) is the primary _command-line_ interface for GraphOS. Among other capabilities, you use Rover to publish subgraph schemas to the registry, run schema checks from CI, and test out your supergraph within your development environment.
   - If you want to automate your own workflows outside of Studio or Rover, you can use the official [GraphOS Platform API](/graphos/platform-api) to do so. We'll expose more GraphOS capabilities through the Platform API over time.
 
