--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -3,7 +3,7 @@ title: Supergraph next steps
 description: Get the most out of GraphOS
 ---
 
-After you [create a supergraph](./cloud/) in Apollo Studio, read below to learn about some of the next steps you should take to get the most out of it and the entire GraphOS platform.
+After you [create a supergraph](./cloud/) with Apollo Studio, read below to learn about some of the next steps you should take to get the most out of it and the entire GraphOS platform.
 
 > For the most part, you can perform these next steps in any order. But you should definitely start by [installing the Rover CLI](#first-install-the-rover-cli).
 
