--- a/src/content/technotes/TN0041-errors-as-data-explained.mdx
+++ b/src/content/technotes/TN0041-errors-as-data-explained.mdx
@@ -1,7 +1,7 @@
 ---
 title: Errors as Data explained
 id: TN0041
-tags: [schema design]
+tags: [schema-design]
 ---
 
 Union types in GraphQL are an excellent way to represent multiple types of data in a single field. This can be extremely useful when dealing with different types of responses, such as success and error cases. By leveraging union types, developers can create a flexible and expressive API that handles different scenarios elegantly and efficiently.
