--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -31,7 +31,7 @@ Now when your router/server starts up, it automatically begins reporting operati
 
 ## Adding support to a third-party server (advanced)
 
-You can set up a reporting agent in your GraphQL server to push metrics to Apollo Studio. The agent is responsible for:
+You can set up a reporting agent in your GraphQL server to push metrics to GraphOS. The agent is responsible for:
 
 - Translating operation details into the correct [reporting format](#reporting-format)
 - Implementing a default **signature function** to identify each executed operation
