--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -35,7 +35,7 @@ You can set up a reporting agent in your GraphQL server to push metrics to Graph
 
 - Translating operation details into the correct [reporting format](#reporting-format)
 - Implementing a default **signature function** to identify each executed operation
-- Emitting batches of traces and statistics to the Apollo Studio reporting endpoint
+- Emitting batches of traces and statistics to the GraphOS reporting endpoint
 - Optionally defining plugins to enable advanced reporting features
 
 Apollo Server defines its agent for performing these tasks in [the usage reporting plugin](https://github.com/apollographql/apollo-server/blob/main/packages/server/src/plugin/usageReporting).
