--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -5,7 +5,7 @@ description: Deliver subsets of your enterprise supergraph
 
 > Contracts are available only for [Enterprise plans](https://www.apollographql.com/pricing/).
 
-Apollo Studio **contracts** enable you to deliver different subsets of your supergraph to different consumers. Each contract filters specific portions of your supergraph's schema into a different Studio variant:
+GraphOS **contracts** enable you to deliver different subsets of your supergraph to different consumers. Each contract filters specific portions of your supergraph's schema into a different GraphOS variant:
 
 ```mermaid
 graph LR;
@@ -183,11 +183,11 @@ Each `@tag` has a string `name`. You tag types and fields with the _same_ `name`
 
 For in-depth details on valid `@tag` usage, see [Rules for `@tag`s and contracts](#rules-for-tags-and-contracts).
 
-> Whenever Studio composes your source variant's [supergraph schema](/federation/federated-types/overview), that schema retains all of the `@tag`s from your subgraph schemas (this is different from most other directives, which are removed by default).
+> Whenever GraphOS composes your source variant's [supergraph schema](/federation/federated-types/overview), that schema retains all of the `@tag`s from your subgraph schemas (this is different from most other directives, which are removed by default).
 
 ### 4. Publish updated subgraph schemas
 
-After you're done adding tags, update your source variant by publishing your updated subgraph schemas to Apollo Studio.
+After you're done adding tags, update your source variant by publishing your updated subgraph schemas to GraphOS.
 
 > After publishing, if Studio doesn't reflect the the tags that you've added in your subgraph schemas, make sure you've [updated all required libraries and tools](#1-update-your-router-and-subgraphs). If you obtain your subgraph schemas via introspection, older subgraph libraries might strip the `@tag` directive.
 
@@ -274,11 +274,11 @@ You can now review all of the details of your contract:
 
 If everything looks right, click **Create**. This kicks off the generation of your contract variant and its initial contract schema as a [launch](./launches).
 
-> Studio might encounter an error while generating your contract schema. For descriptions of these errors, see [Error types](#error-types).
+> GraphOS might encounter an error while generating your contract schema. For descriptions of these errors, see [Error types](#error-types).
 
 ### 6. Use your new contract variant
 
-Congratulations! You've created a contract in Apollo Studio. You can now use your contract variant to provide a [contract router or contract documentation](#what-are-contracts-for) to your users.
+Congratulations! You've created your first GraphOS contract. You can now use your contract variant to provide a [contract router or contract documentation](#what-are-contracts-for) to your users.
 
 For example, you can complete the [managed federation setup](/federation/managed-federation/setup/) for a new router instance that uses your contract variant.
 
@@ -333,7 +333,7 @@ After you create a contract, you can edit its lists of included and excluded tag
 
 This opens a dialog similar to the one you used to create the contract.
 
-If you make any changes to the contract's included or excluded tags, Studio automatically runs [contract checks](#contract-checks) to determine whether those changes will affect any clients that user your contract variant.
+If you make any changes to the contract's included or excluded tags, GraphOS automatically runs [contract checks](#contract-checks) to determine whether those changes will affect any clients that user your contract variant.
 
 The result of these checks is shown in the Review Schema step of the contract edit dialog:
 
@@ -400,7 +400,7 @@ You're done! From now on, whenever schema checks run for your source variant, th
 
 ## Error types
 
-Whenever Apollo Studio attempts to create or update your contract schema, it might encounter an error. Errors are identified by the step in the creation process where they occurred:
+Whenever GraphOS attempts to create or update your contract schema, it might encounter an error. Errors are identified by the step in the creation process where they occurred:
 
 | Error                                      | Description                                                                                                                        |
 | ------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------- |
@@ -410,15 +410,15 @@ Whenever Apollo Studio attempts to create or update your contract schema, it mig
 | `EMPTY_UNION_MASKING`                      | All of a union type's included types were excluded, and an error occurred while excluding the entire union.                        |
 | `INPUT_VALIDATION`                         | The contract is attempting to include and exclude the same tag.                                                                    |
 | `PARSING`                                  | After including and excluding fields, the resulting contract schema failed to parse.                                               |
-| `PARSING_TAG_DIRECTIVES`                   | Studio encountered an error while trying to obtain all uses of `@tag` from the source variant schema.                              |
+| `PARSING_TAG_DIRECTIVES`                   | GraphOS encountered an error while trying to obtain all uses of `@tag` from the source variant schema.                              |
 | `PARTIAL_INTERFACE_MASKING`                | An interface field's return type was excluded, and an error occurred while excluding that interface field.                         |
-| `SCHEMA_RETRIEVAL`                         | Studio encountered an error while retrieving the source variant's schema. It might not yet have a valid composed schema.           |
-| `TAG_INHERITING`                           | Studio encountered an error while attempting to add parent tags to fields.                                                         |
-| `TAG_MATCHING`                             | Studio encountered an error determining which types and fields should be inaccessible based on their tags.                         |
-| `TO_API_SCHEMA`                            | Studio encountered an error while attempting to generate an API schema from the contract variant's supergraph schema.              |
-| `TO_FILTER_SCHEMA`                         | Studio failed to generate and return a contract supergraph schema for an unknown reason.                                           |
+| `SCHEMA_RETRIEVAL`                         | GraphOS encountered an error while retrieving the source variant's schema. It might not yet have a valid composed schema.           |
+| `TAG_INHERITING`                           | GraphOS encountered an error while attempting to add parent tags to fields.                                                         |
+| `TAG_MATCHING`                             | GraphOS encountered an error determining which types and fields should be inaccessible based on their tags.                         |
+| `TO_API_SCHEMA`                            | GraphOS encountered an error while attempting to generate an API schema from the contract variant's supergraph schema.              |
+| `TO_FILTER_SCHEMA`                         | GraphOS failed to generate and return a contract supergraph schema for an unknown reason.                                           |
 | `UNKNOWN`                                  | An unknown error occurred.                                                                                                         |
-| `UNREACHABLE_TYPE_MASKING`                 | Studio encountered an error while attempting to exclude unreachable types in the resulting contract schema.                         |
+| `UNREACHABLE_TYPE_MASKING`                 | GraphOS encountered an error while attempting to exclude unreachable types in the resulting contract schema.                         |
 | `VERSION_CHECK`                            | The Federation version used is not supported by contracts.                                                                         |
 
 ## Rules for `@tag`s and contracts
@@ -453,7 +453,7 @@ type User {
 
 ### Dependent `@tag`s
 
-- Whenever you tag the definition of an object or interface type, Studio automatically considers that tag to be applied to _all fields_ of that type:
+- Whenever you tag the definition of an object or interface type, GraphOS automatically considers that tag to be applied to _all fields_ of that type:
 
     ```graphql
     type InternalUser @tag(name: "internal") {
