Move self-hosted quickstart up in nav and modify Enterprise docset

--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -68,7 +68,7 @@ These features (along with many others) are available to organizations on the **
 These additional features are available to organizations on an **Enterprise** plan:
 
 - [**Self-hosted routing.**](./routing/self-hosted/)
-  - Deploy your supergraph's router inside your own infrastructure, enabling you to maximize its performance and fully customize its behavior. Self-deployed routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
+  - Deploy GraphOS-managed routers inside your own infrastructure, enabling you to maximize performance and fully customize their behavior. Self-hosted routers use [the same powerful technology](/router/) that cloud routing uses under the hood.
 - **Supergraph filtering with [contracts](./delivery/contracts/).**
   - Deploy multiple instances of your router that use different filtered subsets of your supergraph's schema. Different clients can then communicate with different routers, limiting them to whichever types and fields they should have access to.
 - **Extended data retention.**
