--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -190,16 +190,19 @@ flowchart LR;
 
 For this quickstart, we'll use some Apollo-hosted example services as our subgraphs, and we'll set up **the Apollo Router** in front of them. The Apollo Router is a high-performance, precompiled Rust executable that acts as the router for a supergraph.
 
-On your development machine, first create a new directory for your router project. Then inside that directory, run the following to install the Apollo Router:
+Start by using the [GitHub template](https://github.com/apollographql/router-template) to create a new Router project. This comes with all the basics you need to run Router in a Docker container. Click "Use this template" to create a new repository in your GitHub account, then clone that repository to your local machine.
+
+To run the Router locally, you'll need a way to build and run containers, some popular options are:
+
+- [Docker Desktop](https://www.docker.com/products/personal/)
+- [Rancher](https://rancherdesktop.io)
+- [Podman](https://podman.io)
+
+For the rest of this tutorial, we'll be using the `docker` command, but commands for the alternatives should look very similar. Let's try starting the router:
 
 ```bash
-curl -sSL https://router.apollo.dev/download/nix/latest | sh
-```
-
-This installs the `router` executable in your project directory. Try running it with the following command:
-
-```bash
-./router
+docker build -t router .
+docker run -it -p4000:4000 router
 ```
 
 When you do, you'll get a startup error message like the following:
@@ -207,7 +210,7 @@ When you do, you'll get a startup error message like the following:
 <ExpansionPanel title="Click to expand">
 
 ```
-Apollo Router v1.2.0 // (c) Apollo Graph, Inc. // Licensed as ELv2 (https://go.apollo.dev/elv2)
+Apollo Router v1.18.0 // (c) Apollo Graph, Inc. // Licensed as ELv2 (https://go.apollo.dev/elv2)
 
 ⚠️  The Apollo Router requires a composed supergraph schema at startup. ⚠️
 
@@ -336,8 +339,7 @@ type SubmitReviewResponse {
 
 </ExpansionPanel>
 
-
-If you have your own existing subgraphs that you want to use instead of these examples, feel free! Provide their names and URLs wherever you see the example subgraphs used in the steps below.
+When using your own subgraphs, you will use Rover to publish their schemas from their repos, typically in your CI pipeline. If you have your own existing subgraphs that you want to use instead of these examples, feel free! Provide their names and URLs wherever you see the example subgraphs used in the steps below.
 
 </blockquote>
 
@@ -346,103 +348,13 @@ To compose a supergraph schema for our router, GraphOS needs the following infor
 * The subgraph's schema
 * The URL of the subgraph's GraphQL endpoint (which must be accessible by the router)
 
-Fortunately, we have all of this information! Let's collect it in our project.
-
-Do the following in your router project's root directory:
-
-1. Create a new file called `locations.graphql` and paste the following schema into it:
-
-    <ExpansionPanel title="Locations">
-
-    ```graphql title="locations.graphql"
-    extend schema
-      @link(url: "https://specs.apollo.dev/federation/v2.0",
-            import: ["@key"])
-
-    type Query {
-      "The full list of locations presented by the Interplanetary Space Tourism department"
-      locations: [Location!]!
-      "The details of a specific location"
-      location(id: ID!): Location
-    }
-
-    type Location @key(fields: "id"){
-      id: ID!
-      "The name of the location"
-      name: String!
-      "A short description about the location"
-      description: String!
-      "The location's main photo as a URL"
-      photo: String!
-    }
-    ```
-
-    </ExpansionPanel>
-
-2. Create a new file called `reviews.graphql` and paste the following schema into it:
-
-    <ExpansionPanel title="Reviews">
-
-    ```graphql title="reviews.graphql"
-    extend schema
-      @link(url: "https://specs.apollo.dev/federation/v2.0",
-            import: ["@key"])
-
-    type Query {
-      "The three latest reviews submitted for FlyBy's locations"
-      latestReviews: [Review!]!
-    }
-
-    type Mutation {
-      submitReview(locationReview: LocationReviewInput): SubmitReviewResponse
-    }
-
-    type Location @key(fields: "id") {
-      id: ID!
-      "The calculated overall rating based on all reviews"
-      overallRating: Float
-      "All submitted reviews about this location"
-      reviewsForLocation: [Review]!
-    }
-
-    type Review {
-      id: ID!
-      "Written text"
-      comment: String
-      "A number from 1 - 5 with 1 being lowest and 5 being highest"
-      rating: Int
-      "The location the review is about"
-      location: Location
-    }
-
-    input LocationReviewInput {
-      "Written text"
-      comment: String!
-      "A number from 1 - 5 with 1 being lowest and 5 being highest"
-      rating: Int!
-      "Location Id"
-      locationId: String!
-    }
-
-    type SubmitReviewResponse {
-      "Similar to HTTP status code, represents the status of the mutation"
-      code: Int!
-      "Indicates whether the mutation was successful"
-      success: Boolean!
-      "Human-readable message for the UI"
-      message: String!
-      "Newly created review"
-      locationReview: Review
-    }
-    ```
-
-    </ExpansionPanel>
+Fortunately, we have all of this information! Let's send it to GraphOS.
 
 > 💡 **In most supergraphs,** each subgraph schema lives in the codebase for its associated subgraph. Because we're using remotely-hosted example subgraphs in this quickstart, we're saving these subgraph schemas in our router project for convenience.
 
 ## 4. Publish your subgraph schemas
 
-With our subgraph schemas ready, we now can use the Rover CLI's `subgraph publish` command to publish those schemas to GraphOS.
+With Rover already configured, we can use the Rover CLI's `subgraph publish` command to publish our subgraph schemas to GraphOS.
 
 In [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content), click the graph you created back in the first step. Because we haven't published a schema to it yet, the following dialog appears:
 
@@ -453,34 +365,18 @@ In [Apollo Studio](https://studio.apollographql.com/?referrer=docs-content), cli
   width="600"
 />
 
-This dialog shows an example Rover command for publishing a subgraph schema. Copy that command and paste it into your text editor so we can modify it.
+We're going to use a similar command to the "Introspection" option, but we don't need the `APOLLO_KEY` variable because we configured Rover earlier. If you set up a `--profile` with Rover, be sure to use it here! The first subgraph can be published like this:
 
-Edit the command like so:
-
-1. Change the value of the `--name` option to `locations`
-    - This will be our first subgraph's name.
-2. Change the value of the `--schema` option to `./locations.graphql`
-    - This is the path to the schema for our Locations subgraph.
-3. Change the value of the `--routing-url` option to:
-    - `https://flyby-locations-sub.herokuapp.com/` 
-    - This is the URL that our router will use to communicate with the Locations subgraph.
-
-When you're done, the command resembles the following:
-
-```shell {1-2}
-APOLLO_KEY=<API_KEY> \
-rover subgraph publish <GRAPH_REF> \
-  --name locations \
-  --schema ./locations.graphql \
-  --routing-url https://flyby-locations-sub.herokuapp.com/  
+```bash
+rover subgraph introspect https://flyby-locations-sub.herokuapp.com/ | \
+rover subgraph publish --name locations \
+--routing-url https://flyby-locations-sub.herokuapp.com/ \
+--schema - <GRAPH_REF>
 ```
 
 <blockquote>
 
-Note that this command includes two custom values: an **API key** and a **graph ref**.
-
-- Rover uses the **API key** to authenticate with GraphOS. The key's permissions are scoped to this particular graph, which means Rover can't use it to perform operations on any _other_ graph.
-  - If you [authenticated Rover with GraphOS](#authenticate-rover-with-graphos) earlier, you don't actually _need_ to provide an API key to this command via `APOLLO_KEY` (although it's fine to do so).
+Note that you need to replace `<GRAPH_REF>` above with the appropriate value for _your_ graph. In our screenshot above, this is `MyGraph-1ncyus@current` but **your value will be different**.
 
 <ExpansionPanel title="What's a graph ref?">
 
@@ -501,9 +397,7 @@ _After_ you've published a schema to a particular variant, that variant's graph 
 
 </blockquote>
 
-When you're finished modifying the command, paste it into your terminal and run it from your router project's root directory.
-
-If the command is successful, you'll see output like the following:
+Paste the command into your terminal, replace `<GRAPH_REF>` with your value, and run it. If the command is successful, you'll see output like the following:
 
 ```
 A new subgraph called 'locations' was created in 'docs-example-graph@main'
@@ -516,12 +410,11 @@ Nice! If you open your graph's details in Studio now, you'll see types and field
 
 Next, let's do the same thing for our `reviews` subgraph, **again substituting your graph ref**:
 
-```shell {1-2}
-APOLLO_KEY=<API_KEY> \
-rover subgraph publish <GRAPH_REF> \
-  --routing-url https://flyby-reviews-sub.herokuapp.com/ \
-  --schema ./reviews.graphql \
-  --name reviews
+```bash
+rover subgraph introspect https://flyby-reviews-sub.herokuapp.com/ | \
+rover subgraph publish --name reviews \
+--routing-url https://flyby-reviews-sub.herokuapp.com/ \
+--schema - <GRAPH_REF>
 ```
 
 > You only need to provide a subgraph's `--routing-url` the _first_ time you publish that subgraph's schema to a particular variant (unless you need to change that URL later).
@@ -532,31 +425,26 @@ Every time we publish a subgraph schema, GraphOS automatically composes _all_ of
 
 ## 5. Connect the router to GraphOS
 
-It's time to enable our router to fetch its supergraph schema from GraphOS. To do that, we'll need a **graph API key** that we set as the value of an environment variable.
-
-In theory, we _could_ use the same API key that we just provided to the `rover subgraph publish` command. However, it's recommended practice to create a separate API key for each system that communicates with GraphOS. This reduces the impact whenever you need to _replace_ an API key that might be compromised.
-
-> ⚠️ **API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised.
+It's time to enable our router to fetch its supergraph schema from GraphOS. To do that, we'll need a **graph API key** that we set as the value of an environment variable. We recommend that you create a separate API key for each system that communicates with GraphOS. This reduces the impact whenever you need to _replace_ an API key that might be compromised.
 
 1. Obtain a graph API key for your Studio graph by <a href="../api-keys/#graph-api-keys" target="_blank">following these steps</a>. If you have an Enterprise plan, set the API key's role to **Contributor**.
 
     > Make sure to copy and paste the API key's value somewhere so you can reference it (for security, API keys are not visible in Studio after creation).
 
-2. Paste the following terminal command into your text editor so you can make changes to it:
+2. Create a file called `.env` in your Router project and paste in the following (replacing `<API_KEY>` with your graph API key and `<GRAPH_REF>` with your graph ref):
 
-    ```bash
-    APOLLO_KEY=your-api-key \
-    APOLLO_GRAPH_REF=your-graph-id@your-variant \
-    ./router --dev
+    ```
+    APOLLO_KEY=<API_KEY>
+    APOLLO_GRAPH_REF=<GRAPH_REF>
     ```
 
-    Then, make the following changes:
+> ⚠️ **API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised. The provided template has `.env` added to `.gitignore`, if you are not using the template, make sure to add `.env` to your `.gitignore` file.
 
-    * Replace `your-api-key` with your graph API key.
-    * Replace `your-graph-id@your-variant` with your variant's **graph ref**.
-        * _For a refresher on graph refs, see [Step 4](#4-publish-your-subgraph-schemas)._
+3. Paste this command into your terminal and run it:
 
-3. Paste the edited command into your terminal and run it.
+    ```bash
+    docker run -it --env-file .env -p4000:4000 router
+    ```
 
     This time there's no error, and you'll see output similar to the following (timestamps omitted for brevity):
 
@@ -576,10 +464,6 @@ In theory, we _could_ use the same API key that we just provided to the `rover s
     </ExpansionPanel>
 
     > By providing an API key to the router, you also automatically enable **operation metrics reporting** to GraphOS, enabling you visualize your graph's performance. [Learn more about metrics.](../metrics/)
-
-4. **Optionally,** to help you keep track of your router's environment variables, consider setting up a tool like [direnv](https://direnv.net/) so you don't need to set the variables every time you run `./router`.
-
-    (Most cloud deployment environments provide a helpful way to set environment variables, so this issue is mostly limited to local development.)
 
 Now that our router is running, we can quickly open our browser to `localhost:4000` to explore our composed schema in Apollo Sandbox:
 
@@ -607,30 +491,19 @@ Now that our router is running successfully in our development environment, we c
 
 The exact details for deploying the router depend on which platform you use, but these high-level steps hold true for most platforms:
 
-1. Set the `APOLLO_KEY` and `APOLLO_GRAPH_REF` environment variables in the router's deployment environment, as we did locally in [this step](#5-connect-the-router-to-graphos).
-    - Most deployment platforms provide a mechanism for setting environment variables for a given application or container.
+1. Build the Docker image in CI and push it to a container registry (some providers let you skip this step).
+2. Deploy the image to your preferred platform (there are [additional resources for Kubernetes deployments](/docs/router/containerization/kubernetes))
+3. Set the `APOLLO_KEY` and `APOLLO_GRAPH_REF` environment variables in the router's deployment environment, as we did locally in [this step](#5-connect-the-router-to-graphos).
+    - Keep in mind that `APOLLO_KEY` is a secret, so use an appropriate mechanism for storing it in your deployment environment.
 
-2. Make sure the Apollo Router executable is available to the application _before_ it runs `router` to start up.
-    - The application can include the router download command as a pre-launch task:
+4. If your platform expects the router to listen on a particular port, set this port in the [`router.yaml`](https://github.com/dbanty/enterprise-router-test/blob/main/router.yaml) file included with the template:
 
-      ```bash
-      curl -sSL https://router.apollo.dev/download/nix/latest | sh
-      ```
-
-3. If your platform expects the router to listen on a particular port, set this port in a YAML configuration file you include in the application's deployment bundle:
-
-    ```yaml title="router-config.yaml"
+    ```yaml title="router.yaml"
     supergraph:
       # The socket address and port to listen on
       listen: 127.0.0.1:4000
       # OR if the port is specified via environment variable
       listen: 127.0.0.1:${env.PORT}
-    ```
-
-    You provide this config file to the router executable like so:
-
-    ```bash
-    router --config router-config.yaml
     ```
 
     > Learn more about [router configuration options](/router/configuration/overview).
